[metadata]
name = photon-hash
version = 0.0.5
author = Yu-Shiang Jeng
author_email = yushiangjeng@gmail.com
description = Photon hash python bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ectf-osu/photon
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.package_data]
* = *.so

[options.packages.find]
where = src
